--- a/WEB FUNDAMENTALS/week1/day1/core/Registration Form/index.html
+++ b/WEB FUNDAMENTALS/week1/day1/core/Registration Form/index.html
@@ -9,51 +9,51 @@
      <h1>Registration Form</h1>
     <form action="">
         <div>
-            <label for="">First Name:*</label>
+            <label for="first_name">First Name:*</label>
             <input type="text">  
         </div>
         <div>
-            <label for="">Last Name:*</label>
+            <label for="last_name">Last Name:*</label>
             <input type="text">
         </div>
         <div>
-            <label for="">Email address:*</label>
-            <input type="text">
+            <label for="email">Email address:*</label>
+            <input type="email">
         </div>
         <div>
-            <label for="">Passeword:*</label>
+            <label for="Password">Passeword:*</label>
             <input type="Passeword">
         </div>
         <div>
-            <label for="">Confirm Password</label>
+            <label for="confirm_password">Confirm Password</label>
             <input type="Passeword">
         </div>
         <div>
-            <label for="">BIirthday</label>
+            <label for="biryhday">BIirthday</label>
             <input type="date">
         </div>
         <div>
-            <label for="">Gender Identity</label> <br>
-            <label for="">male</label>
+            <label for="gender">Gender Identity</label> <br>
+            <label for="male">male</label>
             <input type="radio">
-            <label for="">Female</label>
+            <label for="female">Female</label>
             <input type="radio">
-            <label for="">non-binary></label>
+            <label for="non_binary">non-binary></label>
             <input type="radio">
-            <label for="">I PREFER NOT TO ANSWER</label>
+            <label for="no_answer">I PREFER NOT TO ANSWER</label>
             <input type="radio">
         </div>
         <div>
             <p>A short descirption about my selef</p>
         </div>
         <div>
-            <textarea name="" id=""></textarea>
+            <textarea name="message" id="" placeholder="message..."></textarea>
         </div>
         <div>
-            <label for="">favorit language</label>
+            <label for="fav_language">favorit language</label>
             <select name="" id="">
-                <option value="">javascript</option>
-                <option value="">paythen</option>
+                <option value="javascript">javascript</option>
+                <option value="paythen">paythen</option>
 
             </select>
         </div>
