--- a/WEB FUNDAMENTALS/week1/day1/practice/Personal Portfolio - Content/index.html
+++ b/WEB FUNDAMENTALS/week1/day1/practice/Personal Portfolio - Content/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<body><h1>Programmer Name</h1>
+<body>
+    <h1>Programmer Name</h1>
     <img src="./assets/images/user.jpg" alt="" width="100px">
     <div class="images">
         <img src="./assets/images/github.png" alt="" width="30px">
@@ -15,56 +16,65 @@
        <img src="./assets/images/g.png" alt="" width="30px">
        <a href="#">gmail</a>
     </div>
-    <h3>technologies</h3>
-   <table border="1">
-       <thead>
-               <tr>
+    <div class="technologies">
+        <h3>technologies</h3>
+        <table>
+            <thead>
+                <tr>
                     <th>front-end</th>
                     <th>python</th>
                     <th>javascript</th>
                     <th>database</th>
                     <th>concepts</th>
 
-              </tr>
-       </thead>
-       <tbody>
-               <tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
                     <td>html5</td>
                     <td>django</td>
-                     <td>rxpress</td>
-                     <td>mysql</td>
-                     <td>ajax</td>
-               </tr>
-               <tr>
-                      <td>css3</td>
-                      <td>flask</td>
-                      <td>mongoose</td>
-                      <td>mongodb</td>
-                      <td>oop</td>
-               </tr>
-               <tr>
-                      <td>bootstrap</td>
-                      <td>unittest</td>
-                      <td>react</td>
-                      <td></td>
-                      <td>rest</td>
-               </tr>
-       </tbody>
-   </table>
-   <h3>social snakes</h3>
-   <img src="./assets/images/image.jpg" alt="" width="70px">
-   <p>social media app in python- <a href="">code</a> |<a href="">deployed</a> </p>
-   <h3>contact me</h3>
-   <div>
-        <label for="">name</label>       
-        <input type="text">
-        <label for="">email</label>
-        <input type="email">
-   </div>
-   <div>
-       <label for="">messaage</label>
-       <textarea name="" id=""></textarea>
-   </div>
-   <input type="submit" value="send message">
+                    <td>rxpress</td>
+                    <td>mysql</td>
+                    <td>ajax</td>
+                </tr>
+                <tr>
+                    <td>css3</td>
+                    <td>flask</td>
+                    <td>mongoose</td>
+                    <td>mongodb</td>
+                    <td>oop</td>
+                </tr>
+                <tr>
+                    <td>bootstrap</td>
+                    <td>unittest</td>
+                    <td>react</td>
+                    <td></td>
+                    <td>rest</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="social_snakes">
+        <h3>social snakes</h3>
+        <img src="./assets/images/image.jpg" alt="image" width="70px">
+        <p>social media app in python- <a href="">code</a> |<a href="">deployed</a> </p>
+    </div>
+    <div class="contact">
+        <h3>contact me</h3>
+        <form action="">
+            <div>
+                <label for="">name</label>       
+                <input type="text">
+                <label for="">email</label>
+                <input type="email">
+            </div>
+            <div>
+                <label for="">messaage</label>
+                <textarea name="message" id=""></textarea>
+            </div>
+            <input type="submit" value="send message">
+        </form>
+    </div>
+  
 </body>
 </html>
