--- a/WEB FUNDAMENTALS/week1/day1/practice/Dictionary Entry/index.html
+++ b/WEB FUNDAMENTALS/week1/day1/practice/Dictionary Entry/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>ninja</h1>
-    <img src="./assets/images/pronunciation.png" alt="">
-    <p>noun</p>
+    <img src="./assets/images/pronunciation.png" alt="image">
+    <p> <em>noun</em></p>
     <ol>
         <li>a practioner skilled in the japanese art  of ninjustu</li>
         <li>a programmer who breaks down problems with zen like focus </li>
