--- a/WEB FUNDAMENTALS/week1/day1/practice/Dictionary Entry/index.html
+++ b/WEB FUNDAMENTALS/week1/day1/practice/Dictionary Entry/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>ninja</h1>
-    <img src="./assets/images/pronunciation.png" alt="image">
+    <img src="./assets/images/pronunciation.png" alt="pronunciation">
     <p> <em>noun</em></p>
     <ol>
         <li>a practioner skilled in the japanese art  of ninjustu</li>
