--- a/WEB FUNDAMENTALS/week2/day3/practice/DojoWeather/index.html
+++ b/WEB FUNDAMENTALS/week2/day3/practice/DojoWeather/index.html
@@ -11,9 +11,9 @@
         <div class="navbar">
             <h1>DojoWeather</h1>
             <ul>
-                <li onclick="loding()"><a href="">burbank</a></li>
-                <li onclick="loding()" ><a href="">Chigago</a></li>
-                <li onclick="loding()"><a href="">dalas</a></li>
+                <li onclick="loading()"><a href="#">burbank</a></li>
+                <li onclick="loading()" ><a href="#">Chigago</a></li>
+                <li onclick="loading()"><a href="#">dalas</a></li>
                 
             </ul>
 
@@ -23,7 +23,7 @@
                 <div><h2>San Jose</h2>
                 </div>
                 <div class="tem">
-                   <p>show temperature</p>
+                   <label for="">show temperature</label>
                    <select name="temperature" onchange="change(this)" > 
                        <option value="C">°C</option>
                        <option value="F">°F</option>
@@ -31,38 +31,38 @@
                 </div>
             </div>
              <div class="row">
-                <div class="wither">
+                <div class="weather">
                         <h1>today</h1>
                         <img src="./assets/some_rain.png" alt="rain">
                         <p>some rain</p>
                         <p class="temperature">
-                            <span  class="hight">24°</span>
+                            <span  class="high">24°</span>
                             <span class="low">18°</span>
                         </p>
 
                     </div>
-                    <div class="wither">
-                        <h1>tomorow</h1>
+                    <div class="weather">
+                        <h1>Tomorow</h1>
                         <img src="./assets/some_sun.png" alt="sun">
                         <p>SUN</p>
                         <p class="temperature">
-                            <span class="hight" >27°</span>
+                            <span class="high" >27°</span>
                             <span class="low">19°</span>
                         </p>
 
                     </div>
-                    <div class="wither">
+                    <div class="weather">
                         <h1>friday</h1>
                         <img src="./assets/some_clouds.png" alt="clouds">
                         <p>some CLOUDS</p>
                         <p class="temperature">
-                            <span class="hight" >21°</span>
+                            <span class="high" >21°</span>
                             <span class="low" >16°</span>
                         </p>
 
                     </div>
-                    <div class="wither">
-                        <h1>sturday</h1>
+                    <div class="weather">
+                        <h1>Sturday</h1>
                         <img src="./assets/some_sun.png" alt="sun">
                         <p> SUN</p>
                         <p class="temperature">
